apps/query-derive/tests/ui/multi_not_document.stderr
error[E0277]: the trait bound `std::string::String: FlussoIndex` is not satisfied
 --> tests/ui/multi_not_document.rs:7:10
  |
7 |     Text(String),
  |          ^^^^^^ the trait `FlussoIndex` is not implemented for `std::string::String`
